force-app/main/default/objects/StripeInvoice__c/StripeInvoice__c.object-meta.xml
<CustomObject>
    <label>Stripe Invoice</label>
    <nameField>
        <label>Stripe Invoice ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stripe Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>