force-app/main/default/objects/StripeInvoice__c/fields/InvoiceStatus__c.field-meta.xml
<CustomField>
    <fullName>InvoiceStatus__c</fullName>
    <description>This is the picklist field created from Salesforce Metadata API</description>
    <inlineHelpText>This is the picklist field created from Salesforce Metadata API</inlineHelpText>
    <label>Invoice Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Part-Paid</fullName>
            </value>
            <value>
                <fullName>Voided</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>