force-app/main/default/objects/StripeInvoice__c/fields/StripeCustomer__c.field-meta.xml
<CustomField>
    <fullName>StripeCustomer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the Lookup field related to Account Object</description>
    <inlineHelpText>This is the Lookup field related to Account Object</inlineHelpText>
    <label>Stripe Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Stripe Invoices</relationshipLabel>
    <relationshipName>StripeInvoices</relationshipName>
    <type>Lookup</type>
</CustomField>