force-app/main/default/objects/StripeInvoice__c/fields/StripeUUID__c.field-meta.xml
<CustomField>
    <fullName>StripeUUID__c</fullName>
    <description>This is the field created from Salesforce Metadata API</description>
    <externalId>true</externalId>
    <inlineHelpText>This is the field created from Salesforce Metadata API</inlineHelpText>
    <label>Stripe UUID</label>
    <length>120</length>
    <type>Text</type>
</CustomField>